<resources>
    <string name="app_name">Apolis E-Market</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_placeholder">Replace With Name</string>
    <string name="description_category_image">Category Image</string>
    <string name="welcome_to_apolis_e_market">Welcome To Apolis E-Market</string>
    <string name="title_add_to_cart_btn">Add To Cart</string>
    <string name="description_price">%s is %s USD</string>
    <string name="no_items_present">Uh Oh, We\'re Out</string>
    <string name="replace_with_logo">Replace With Logo</string>
    <string name="hint_name">First name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Phone</string>
    <string name="text_sign_up">No Account? click here to sign up</string>
    <string name="btn_go">Go!</string>
    <string name="default_value">0</string>
    <string name="title_quantity">Quantity</string>
    <string name="title_price">Price</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_settings">Settings</string>
    <string name="user_image">user image</string>
    <!-- Preference Titles -->
    <string name="title_account_info">Account Info</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <!-- Sync Preferences -->
    <string name="title_see_ya_later">See Ya Later!</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_bill_to">Bill To</string>
    <string name="title_delivery_address">Delivery Address</string>
    <string name="save_address">Save Address</string>
    <string name="title_country">Country</string>
    <string name="hint_street_name">Street Name</string>
    <string name="hint_house_number">House Number Or Building</string>
    <string name="hint_city">Location</string>
    <string name="hint_zip_code">Postal Code</string>
    <string name="radio_btn_title_home">Home</string>
    <string name="radio_btn_title_office">Office</string>
    <string name="radio_btn_title_other">Other</string>
    <string name="add_address">Add New Address</string>
    <string name="title_person_name">Person Name</string>
    <string name="title_address_type_placeholder">Home</string>
    <string name="title_location">City, State</string>
    <string name="title_address">Address</string>
    <string name="title_postal">Postal</string>
    <string name="title_delete">Delete</string>
    <string name="title_edit">Edit</string>
    <string name="title_select_delivery_address">Select Delivery Address</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_items_in_cart">No Items In Cart</string>
    <string name="title_payment_info">Payment Info</string>
    <string name="title_check_out">Check Out</string>
    <string name="title_sub_total">Subtotal</string>
    <string name="title_add_an_address">Add an Address To Continue</string>
    <string name="title_amount_to_pay">Amount To Pay</string>
    <string name="you_will_save_s_on_this_order">You will save %s on this order!</string>
    <string name="total">Total</string>
    <string name="title_tax">Tax</string>
    <string name="title_delivery">Delivery</string>
    <string name="pay_with_cash">Pay With Cash</string>
    <string name="title_pay_online">Pay Online</string>
    <string name="title_order_confirmed">Order Successful</string>
    <string name="go_home">Go Home</string>
    <string name="united_states">US</string>
    <string name="title_orders">Orders</string>
    <string name="title_order_amount">Order Amount</string>
    <string name="title_order">Order</string>
    <string name="hint_order_id">Order Id</string>
    <string name="title_order_date">Ordered Data</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="hint_products">Products</string>
    <string name="no_orders">No Orders</string>
</resources>