<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/text_view_address_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/title_address_type_placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_view_bill_to_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_person_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_address_type" />


        <TextView
            android:id="@+id/text_view_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_address"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_bill_to_name" />


        <TextView
            android:id="@+id/text_view_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_location"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_address" />


        <TextView
            android:id="@+id/text_view_postal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_postal"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_location" />


        <TextView
            android:id="@+id/text_view_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_postal" />


        <TextView
            android:id="@+id/text_view_delete_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_delete"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/text_view_edit_address"
            app:layout_constraintTop_toBottomOf="@+id/text_view_postal" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>