<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.fragment.settings.OrderDetailsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintTop_toBottomOf="@id/card_view_bill_to"
            tools:layout_editor_absoluteX="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_order"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/edit_order_id"/>

                <TextView
                    android:id="@+id/edit_order_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_order_id"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_order"/>

                <TextView
                    android:id="@+id/edit_order_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:background="@null"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/title_order_date"
                    app:layout_constraintTop_toBottomOf="@id/edit_order_id" />

                <TextView
                    android:id="@+id/edit_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_person_name"
                    android:background="@null"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/edit_order_date" />

                <TextView
                    android:id="@+id/text_payment_mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/payment_mode"
                    android:textSize="14sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/edit_payment_amount"
                    app:layout_constraintEnd_toEndOf="@+id/edit_payment_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_person_name" />

                <TextView
                    android:id="@+id/edit_payment_status"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:hint="@string/hint_zip_code"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_payment_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_payment_mode" />

                <TextView
                    android:id="@+id/edit_payment_amount"
                    android:layout_width="183dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:hint="@string/united_states"
                    android:maxLength="2"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/edit_payment_status"
                    app:layout_constraintTop_toBottomOf="@+id/text_payment_mode" />

                <TextView
                    android:id="@+id/text_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_delivery_address"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/edit_payment_amount"/>

                <TextView
                    android:id="@+id/edit_house_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_house_number"
                    android:background="@null"
                    android:layout_marginTop="30dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintTop_toBottomOf="@id/text_delivery" />

                <TextView
                    android:id="@+id/edit_street_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_street_name"
                    android:background="@null"
                    android:layout_marginTop="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintTop_toBottomOf="@id/edit_house_number" />

                <TextView
                    android:id="@+id/edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_city"
                    android:background="@null"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/edit_street_name" />

                <TextView
                    android:id="@+id/edit_products"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/hint_products"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_city" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/edit_products"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>
</layout>