<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_bill_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/text_bill_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/title_bill_to"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <EditText
                        android:id="@+id/edit_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:background="@null"
                        android:layout_marginTop="30dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        app:layout_constraintTop_toBottomOf="@id/text_bill_to"/>

                    <EditText
                        android:id="@+id/edit_text_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_mobile"
                        android:background="@null"
                        android:layout_marginTop="20dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:inputType="number"
                        app:layout_constraintTop_toBottomOf="@id/edit_text_name"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_submit"
                app:layout_constraintTop_toBottomOf="@id/card_view_bill_to"
                tools:layout_editor_absoluteX="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/text_delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_delivery_address"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <EditText
                        android:id="@+id/edit_house_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_house_number"
                        android:background="@null"
                        android:layout_marginTop="30dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:inputType="number"
                        app:layout_constraintTop_toBottomOf="@id/text_delivery" />

                    <EditText
                        android:id="@+id/edit_street_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_street_name"
                        android:background="@null"
                        android:layout_marginTop="20dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        app:layout_constraintTop_toBottomOf="@id/edit_house_number" />

                    <EditText
                        android:id="@+id/edit_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_city"
                        android:background="@null"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/edit_street_name" />

                    <TextView
                        android:id="@+id/text_country"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_country"
                        android:textSize="14sp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintBottom_toTopOf="@+id/edit_country"
                        app:layout_constraintEnd_toEndOf="@+id/edit_country"
                        app:layout_constraintStart_toStartOf="@+id/edit_country"
                        app:layout_constraintTop_toBottomOf="@+id/edit_city" />

                    <EditText
                        android:id="@+id/edit_postal_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@null"
                        android:hint="@string/hint_zip_code"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:inputType="number"
                        app:layout_constraintEnd_toStartOf="@id/edit_country"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_country" />

                    <EditText
                        android:id="@+id/edit_country"
                        android:layout_width="183dp"
                        android:layout_height="34dp"
                        android:layout_marginStart="5dp"
                        android:background="@null"
                        android:hint="@string/united_states"
                        android:maxLength="2"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/edit_postal_code"
                        app:layout_constraintTop_toBottomOf="@+id/text_country" />

                    <TextView
                        android:id="@+id/text_address_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_delivery_address"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/edit_country"/>

                    <RadioGroup
                        android:id="@+id/radio_group_address_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@id/text_address_type">

                        <RadioButton
                            android:id="@+id/radio_btn_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/radio_btn_title_home"/>

                        <RadioButton
                            android:id="@+id/radio_btn_office"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/radio_btn_title_office"/>

                        <RadioButton
                            android:id="@+id/radio_btn_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/radio_btn_title_other"/>

                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_address"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>